Do not display empty message when starting without plugins, inform users about the status

BUG:389844

Translators: new string approved during string freeze